--- a/trading.html
+++ b/trading.html
@@ -354,7 +354,11 @@ document.addEventListener("DOMContentLoaded", () => {
 
 });
 
+  createTradeBox("leftBox");
+  createTradeBox("rightBox");
+
 </script>
 </body>
 </html>
+
 
