--- a/trading.html
+++ b/trading.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=1200">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Trading Mode</title>
 
 <style>
@@ -38,6 +38,7 @@ body {
 .container {
   max-width: 1200px;
   margin: 80px auto 40px auto;
+  padding: 0 20px;
 }
 
 h1 {
@@ -352,6 +353,8 @@ document.addEventListener("DOMContentLoaded", () => {
   box.appendChild(popup);
 }
 
+  }
+
   createTradeBox("leftBox");
   createTradeBox("rightBox");
 
@@ -360,6 +363,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
 
 
