--- a/trading.html
+++ b/trading.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=1200">
 <title>Trading Mode</title>
 
 <style>
@@ -353,7 +353,9 @@ document.addEventListener("DOMContentLoaded", () => {
   box.appendChild(popup);
 }
 
-  }
+  render();
+  updateTotals();
+}
 
   createTradeBox("leftBox");
   createTradeBox("rightBox");
@@ -363,6 +365,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
 
 
