--- a/trading.html
+++ b/trading.html
@@ -63,13 +63,14 @@ h1 {
 }
 
   .trade-title {
-  background: rgba(255,255,255,0.08);
-  padding: 10px;
-  border-radius: 12px;
   text-align: center;
-  color: white;
-  font-size: 18px;
+  color: #ffffff;
+  font-size: 20px;
+  letter-spacing: 2px;
   margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 2px solid rgba(255,255,255,0.15);
+  background: transparent;
 }
 
 .trade-box::-webkit-scrollbar {
@@ -383,6 +384,7 @@ document.addEventListener("DOMContentLoaded", () => {
 </script>
 </body>
 </html>
+
 
 
 
