--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ function searchTable() {
 
     rows.forEach((row, index) => {
         row.dataset.rank = index + 1;
-        row.children[0].textContent = index + 1;
+        row.children[0].textContent = "#" + (index + 1);
         tbody.appendChild(row);
     });
 
@@ -614,3 +614,4 @@ function searchTable() {
     </div>
 </body>
 </html> 
+
