--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <div class="header-text">
                 <div class="game-name">Shrek In The Backrooms</div>
                 <div class="author">Unofficial Value list</div>
-                <div class="last-updated">Last updated: 2/12/2026</div>
+                <div class="last-updated">Last updated: 2/13/2026</div>
             </div>
         </div>
     <p class="description">
@@ -438,7 +438,7 @@
     </div>
     <div class="credits">
     Unofficial value list by <strong>Nova (UNOIRD)</strong><br>
-    Contributors: <strong>Meowmere5000, PivotEngine, NS16, Ethan_Power2016</strong><br>
+    Contributors: <strong>Meowmere5000, PivotEngine, NS16, Ethan_Power2016, RRR</strong><br>
     </div>
     </div>
     </div>
@@ -614,4 +614,3 @@ function searchTable() {
     </div>
 </body>
 </html> 
-
