--- a/index.html
+++ b/index.html
@@ -361,6 +361,20 @@
     animation: pulseGlow 2.5s infinite ease-in-out;
   }
 
+    @media (max-device-width: 768px) {
+
+  .description {
+    font-size: 12px;
+    line-height: 1.4;
+  }
+
+  .credits {
+    font-size: 12px;
+    line-height: 1.4;
+  }
+
+  }
+
   </style>
 </head>
 <body>
@@ -614,3 +628,4 @@ function searchTable() {
     </div>
 </body>
 </html> 
+
