--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     This is an unofficial Shrek In The Backrooms value list.
     <br> Use light mode in your browser (Recommended), some visuals may experience issues in Dark Mode.
     <br> The total value of each item is determined using the following formula: 
-    <br> <b>Total Value = ((Power<sup>1.5</sup>) × (Rarity<sup>4</sup>)) / 100000</b>.
+    <br> <b>Total Value = ((Power<sup>1.2</sup>) × (Rarity<sup>3.5</sup>)) / 6300</b>.
     </p>
 
 <div class="controls-bar">
@@ -452,7 +452,7 @@
     </div>
     <div class="credits">
     Unofficial value list by <strong>Nova (UNOIRD)</strong><br>
-    Contributors: <strong>Meowmere5000, PivotEngine, NS16, Ethan_Power2016, RRR</strong><br>
+    Contributors: <strong>Meowmere5000, PivotEngine, NS16, Ethan_Power2016, Rar</strong><br>
     </div>
     </div>
     </div>
@@ -476,7 +476,7 @@ function generateTable() {
     ITEMS.forEach((item, index) => {
 
         const totalValue = Math.round(
-            (Math.pow(item.rarity, 4) * Math.pow(item.power, 1.5)) / 100000
+            (Math.pow(item.rarity, 3.5) * Math.pow(item.power, 1.2)) / 6300
         );
 
         const row = document.createElement("tr");
@@ -572,7 +572,7 @@ function applyFilters() {
       function exportItemsToStorage() {
     const items = ITEMS.map(item => {
         const totalValue = Math.round(
-            (Math.pow(item.rarity, 4) * Math.pow(item.power, 1.5)) / 100000
+            (Math.pow(item.rarity, 3.5) * Math.pow(item.power, 1.2)) / 6300
         );
 
         return {
@@ -628,4 +628,5 @@ function searchTable() {
     </div>
 </body>
 </html> 
+
 
