--- a/index.html
+++ b/index.html
@@ -223,8 +223,12 @@
     th:nth-child(3), td:nth-child(3) { width: 100px; }
     th:nth-child(4), td:nth-child(4) { width: 100px; text-align: right; }
     th:nth-child(5), td:nth-child(5) { width: 150px; text-align: right; }
-    th:nth-child(6), td:nth-child(6) { width: 120px; text-align: center; }
-    th:nth-child(7), td:nth-child(7) { width: 160px; text-align: right; }
+    th:nth-child(6), td:nth-child(6) { width: 140px; text-align: center; padding-left: 30px; }
+    th:nth-child(7), td:nth-child(7) { width: 180px; text-align: right; padding-right: 30px; }
+
+    th, td {
+      padding: 12px 18px;
+    }
 
     .credits {
       margin-top: 14px;
@@ -633,6 +637,7 @@ function searchTable() {
     </div>
 </body>
 </html> 
+
 
 
 
